# downloadSiegHub

./: .gitignore  README.md  pyproject.toml
notebook/: analiseDFe.ipynb
src/: app.py  app2.py  integraSiegDFE.py  main.py  test.py
src/dfe/: DocumentoFiscalParser.py  GerenciadorArquivos.py  appDFe.py  appNFeLib.py  dfe_xml_to_pandas.py
src/sieg/: SiegApiHandler.py
temp/: resultado.xml
