[tool.poetry]
name = "donwload sieg hub"
version = "0.1.0"
description = "Download de documentos fiscais do Sieg Hub"
authors = ["frzanini <frzanini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
